<resources>
    <string name="app_name">Luna</string>

    <string name="action_settings">Settings</string>

    <string name="placeTv">Place</string>
    <string name="temperatureTv">--</string>
    <string name="minusSymbolTv">-</string>
    <string name="degreeSymbolTv">°</string>
    <string name="tableFragmentLeftDefaultHeader">---</string>
    <string name="tableFragmentLeftDefaultValue">---</string>
    <string name="tableFragmentRightDefaultHeader">---</string>
    <string name="tableFragmentRightDefaultValue">---</string>
    <string name="tableFragmentHumidityHeader">HUMIDITY</string>
    <string name="tableFragmentPressureHeader">PRESSURE</string>
    <string name="tableFragmentMinTempHeader">MIN TEMP</string>
    <string name="tableFragmentMaxTempHeader">MAX TEMP</string>
    <string name="weatherSummaryTv">Weather Summary</string>
    <string name="noLocationOrNetworkErrorMessage">Location or network are unavailable</string>
    <string name="permissionsDeniedErrorMessage">Oops. Permissions denied :(</string>
    <string name="forecastListEmptyTv">Fetching Data...</string>
    <string name="jsonExceptionErrorMessage">Downloaded data is not a valid JSON</string>
    <string name="geocoderFailureErrorMessage">Failed to get geocoder place</string>
    <string name="networkFailureErrorMessage">Network error. Please check your internet connection</string>
    <string name="waitingForLocationMessage">Waiting for location...</string>
    <string name="fragmentTimestampTv">At -- --- it will be</string>
</resources>
