<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.hochland386.luna.fragments.TemperatureFragment"
             tools:background="@color/honeyFlower_bg">

    <TextView
        android:id="@+id/fragmentTemperatureTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="100sp"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/temperatureTv"/>

    <TextView
        android:id="@+id/fragmentMinusSymbolTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/fragmentTemperatureTv"
        android:layout_centerVertical="true"
        android:paddingRight="5dp"
        android:textSize="100sp"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/minusSymbolTv"/>

    <TextView
        android:id="@+id/fragmentDegreeSymbolTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/fragmentTemperatureTv"
        android:layout_alignTop="@id/fragmentTemperatureTv"
        android:textSize="100sp"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/degreeSymbolTv"/>

</RelativeLayout>
