<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.hochland386.luna.fragments.TableDataFragment"
             tools:background="@color/honeyFlower_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:baselineAligned="false"
        android:weightSum="100">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50">

            <TextView
                android:id="@+id/tableFragmentLeftHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#80ffffff"
                android:text="@string/tableFragmentLeftDefaultHeader"/>

            <TextView
                android:id="@+id/tableFragmentLeftValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_dark"
                android:text="@string/tableFragmentLeftDefaultValue"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50">

            <TextView
                android:id="@+id/tableFragmentRightHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#80ffffff"
                android:text="@string/tableFragmentRightDefaultHeader"/>

            <TextView
                android:id="@+id/tableFragmentRightValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="4dp"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_dark"
                android:text="@string/tableFragmentRightDefaultValue"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
